fix: fix overflow on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,9 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 100%;
-    padding: 0 20rem;
+    max-width: 80%;
+    margin: 0 auto;
+
 }
 
 .fire {
